--- a/n25_29april/Project1.dproj
+++ b/n25_29april/Project1.dproj
@@ -102,7 +102,7 @@
             <Form>Form1</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="U25.pas"/>
+        <DCCReference Include="logic25.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
